kubernetes/rr-fam/nzb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nzb
  namespace: rr-fam
spec:
  serviceName: nzb
  replicas: 1
  selector:
    matchLabels:
      app: nzb
  template:
    metadata:
      labels:
        app: nzb
    spec:
      containers:
      - name: nzb
        image: ghcr.io/linuxserver/sabnzbd:3.6.1-ls75 
        ports:
        - containerPort: 8080
          name: http
        # - containerPort: 9090
        #   name: https
        volumeMounts:
        - name: config
          mountPath: /config/
          readOnly: false
        - name: downloads
          mountPath: /downloads
          readOnly: false
        # livenessProbe:
        #   tcpSocket:
        #     port: 9080
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        # readinessProbe:
        #   tcpSocket:
        #     port: 9080
        #   initialDelaySeconds: 15
        #   periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "2000m"
      volumes:
      - name: downloads
        nfs:
          server: 10.1.0.200
          path: /volume1/dev/downloads
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: nzb-svc
  namespace: rr-fam
  labels:
    name: nzb-svc
spec:
  type: ClusterIP
  selector:
    app: nzb
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    # - port: 9090
    #   targetPort: 9090
    #   name: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nzb-ingress
  namespace: rr-fam
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nzb.kube.crowlight.com`)
      kind: Rule
      services:
        - name: nzb-svc
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: kube-crowlight-com-staging-tls
