kubernetes/rr-fam/radarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: rr-fam
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr:4.1.0.6175-ls150
        ports:
        - containerPort: 7878
          name: web
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: false
        - name: media
          mountPath: /movies
          readOnly: false
        - name: downloads
          mountPath: /downloads
          readOnly: false
        livenessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "2000m"
      volumes:
      - name: downloads
        nfs:
          server: 10.1.0.200
          path: /volume1/dev/downloads
      - name: media
        nfs:
          server: 10.1.0.200
          path: /volume1/dev/media/movies
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: rr-fam
  labels:
    name: radarr-svc
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: rr-fam
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.kube.crowlight.com`)
      kind: Rule
      services:
        - name: radarr-svc
          port: 7878
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: kube-crowlight-com-staging-tls
